--- a/.linthtmlrc.json
+++ b/.linthtmlrc.json
@@ -4,7 +4,6 @@
     "background",
     "bgcolor",
     "border",
-    "frameborder",
     "style"
   ],
   "attr-name-ignore-regex": "viewBox",
@@ -19,7 +18,7 @@
   "html-req-lang": true,
   "id-class-style": false,
   "id-no-dup": true,
-  "img-req-src": true,
+  "img-req-src": false,
   "img-req-alt": "allownull",
   "indent-width": 2,
   "indent-style": "spaces",
@@ -43,7 +42,7 @@
   "text-ignore-regex": "&",
   "title-no-dup": true,
   "line-end-style": "lf",
-  "attr-new-line": 2,
+  "attr-new-line": 4,
   "attr-name-style": "dash",
   "attr-no-unsafe-char": true
 }
